    - Action 2 road vehicle variables 4B, 4C, 61, 62.
    - Action 2 ship variables 4B, 4C.
    - Action 2 aircraft variables 4B, 4C.
    - Callback 15F
  - Fix reading incorrect graphics when multiple graphics are provided for a sprite and writing a GRF container version 1 GRF and the y position decreases
  - Fix decoding of regular encoded 32bpp sprites

Changes in 6.0.0 (2012-03-05)
- NFO version 32 for supporting GRF container version 2.
- GRF container version 2 with bigger sprites and multiple images (bit depth and zoom level) for real sprites.
- GRFID now has a command line option to create the (OpenTTD) MD5 checksum of a NewGRF. For GRF container version 2 NewGRFs this means the MD5 checksum of the header and data sections.
- GRFCodec specific changes:
  - Command line option -n that determines the best compression for sprites during compilation. This could improve compression
- NFORenum specific changes:
  - Data file updates
    - Action 0 airport property 11.
    - Action 0 railtype properties 1C and 1D.
    - Action 0 aircraft property 1F.
    - Action 0 cargo property 1D.
    - Action 2 railtype variable 44.
    - Action 4 language ID 0x3D (Australian).
    - Action 5 type 17/97.
    - Action 5 type 15/95.

Changes in 5.1.3 (2011-12-19)
- GRFCodec specific changes:
  - Fix creation of PNG as some versions of libpng would see the generated PNG as corrupt.
- NFORenum specific changes:
  - Data file updates
    - Action 0 train property 2B.
    - Action 0 road vehicle properties 22 and 23.
    - Action 0 ship properties 1D.
    - Action 0 aircraft property 1C.
    - Action 0 railtype property 1B.
    - Action 2 callback 15E.
    - Action 2 vehicle variable 4B.
    - Action 8 GRF version 8.
    - Action D patch variable 14.
  - Support for font size 3 (monospaced font).

Changes in 5.1.2 (2011-10-07)
- NFORenum specific changes:
  - Data file updates
    - Action 3 canals ID 8.
    - Action 5 type 15 takes 0xA2 sprites.